--- a/02_CSS3/09_배경관련스타일.html
+++ b/02_CSS3/09_배경관련스타일.html
@@ -23,6 +23,31 @@
         #div1{background-clip: border-box;}
         #div2{background-clip: padding-box;}
         #div3{background-clip: content-box;}
+
+        #test{
+            border: 1px solid black;
+            width: 70%; /*가변길이*/
+            height: 800px; /*고정길이*/
+
+            background-image: url("resources/image/bgsample.PNG");
+            background-repeat: repeat; /*기본값*/
+            background-repeat: repeat-x;
+            background-repeat: repeat-y;
+            background-repeat: no-repeat;
+            background-size: auto; /*기본값*/
+            background-size: contain; /*채우고 끝남*/
+            background-size: cover;
+            background-size: 300px 200px;
+            background-size: 50% 50%;
+            background-position: left top; /*기본값*/
+            background-position: right top;
+            background-position: right bottom;
+            background-position: center bottom;
+            background-position: center center; /*가운데 정렬*/
+            background-position: 50% 50%; /*가운데 정렬*/
+            background-attachment: scroll; /*기본값*/
+            background-attachment: fixed;
+        }
     </style>
 </head>
 <body style="background-color: skyblue;">
@@ -47,5 +72,20 @@
     <div class="div-test" id="div2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, aliquam, iure facilis iusto repudiandae quia aliquid et mollitia nemo tempora voluptatum alias ducimus nam, rem ea unde voluptates suscipit exercitationem.</div>
     <div class="div-test" id="div3">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid sed saepe fugiat suscipit cum minima amet nostrum natus, voluptatem vero tempora quae et reprehenderit odio, doloribus aliquam, neque quod maiores!</div>
 
+    <hr>
+
+    <h3>배경 이미지 테스트</h3>
+    <pre>
+    선택지 {
+        background-image : url("이미지 경로");
+        background-repeat | repeat-x | repeat-y | no-repeat;
+        background-size : auto | contain | cover | px px | % %;
+        background-position : 좌/우/가운데 위/아래/가운데 | px px | % %;
+        background-attachment : scroll | fixed; 
+    }
+    </pre>
+
+    <!-- #test 하면 기본적으로 div -->
+    <div id="test"></div>
 </body>
 </html>
