--- a/02_CSS3/실습/01_실습.html
+++ b/02_CSS3/실습/01_실습.html
@@ -83,18 +83,20 @@
         #content_2 img{
             box-sizing: border-box;
             width: 100%;
-            height: 85%;
-            padding: 5px;
+            height: 230px;
+            padding-top: 10px;
+            padding-left: 5px;
+            padding-right: 5px;
         }
 
         #content_up, #content_down{width: 100%; height: 50%;}
         #content_left, #content_right{width: 50%; height: 100%; float: left;}
-        #content_2 p{text-align: center;}
+        #content_2 p{text-align: center; margin: 0; font-size: 15px;}
 
         /* content_3 */
         /* 로그인 구현하기 */
         #content_3>*{width: 100%;}
-        #content_login{height: 20%;}
+        #content_login{height: 20%; padding-top: 5px;}
         #login_form_input{height: 70%;}
         #login_form_etc{height: 30%; text-align: center;}
 
