--- a/02_CSS3/실습/02_실습.html
+++ b/02_CSS3/실습/02_실습.html
@@ -242,7 +242,7 @@
                         <a href="#">연예</a>
                         <a href="#">사회</a>
                     </div>
-                    <!-- <p id="notice">
+                    <!-- <p id="notice"> // 별도의 div 생성없이 &nbsp;를 사용하여 디자인 틀 만드는 방법
                         &nbsp;&nbsp;&nbsp;&nbsp;
                         안녕하세요 여기는 공지사항 제목이 들어오는 자리입니다.
                         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
