--- a/01_HTML5/03_표관련태그.html
+++ b/01_HTML5/03_표관련태그.html
@@ -54,7 +54,7 @@
         -->
 
         <h1>기본적인 표 만들기</h1>
-        <table border="1"> <!-- boeder 속성 : 표의 테두리 두께-->
+        <table border="1"> <!-- border 속성 : 표의 테두리 두께-->
             <!-- caption : 테이블의 제목을 추가하는 태그-->
             <caption><b>웹 브라우저의 종료</b></caption>
             <tr>
