--- a/03_JavaScript/07_함수.html
+++ b/03_JavaScript/07_함수.html
@@ -163,5 +163,21 @@
         }
     </script>
 
+    <br>
+    
+    <h3>* 익명함수를 리턴</h3>
+    이름 : <input type="text" id="userName">
+    <button onclick="test7()();">실행확인</button> <!-- "test7();" 함수만 리턴받음 / "test7()();" 함수를 실행한 값을 리턴받음-->
+
+    <script>
+        function test7() {
+            let inputEl = document.getElementById("userName");
+            // console.log(inputEl.value);
+            return function(){
+                alert(inputEl.value); // 이렇게만 쓰면 함수 실행이 안됨
+            };
+        }
+    </script>
+
 </body>
 </html>
