--- a/03_JavaScript/실습/실습문제09_배열실습문제.html
+++ b/03_JavaScript/실습/실습문제09_배열실습문제.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>배열 실습 문제 4</title>
     <style>
-        .area{
+        div{
             border: 1px solid red;
+            width: 900px;
             height: 20px;
         }
     </style>
@@ -21,21 +22,45 @@
     결과-> 피자 치킨 햄버거 떡볶이 타코야끼
     <fieldset>
         <legend>보기</legend>
-        피자 치킨 당근 햄버거 떡볶이
+        <label id="food">피자 치킨 당근 햄버거 떡볶이</label>
     </fieldset>
     
     <br>
-    <input type="text" id="delFood" size="25%" placeholder="삭제할 음식이름을 입력하세요">
-    <input type="text" id="addFood" size="25%" placeholder="추가할 음식이름을 입력하세요">
+    <input type="text" id="delItem" size="25%" placeholder="삭제할 음식이름을 입력하세요">
+    <input type="text" id="addItem" size="25%" placeholder="추가할 음식이름을 입력하세요">
 
     <br><br>
-    <div id="area1" class="area"></div>
+    <div id="result">이 부분에 정답이 출력 될 수 있도록 하세요</div>
     <br>
-    <button onclick="output_txt();">처리 및 출력</button>
+    <button onclick="test();">처리 및 출력</button>
 
     <script>
-        function output_txt() {
-            
+        function test() {
+            // div요소 선택
+            let divEl = document.getElementById("result");
+
+            // 음식들을 담을 변수
+            let food = document.getElementById("food").innerHTML.split(" ");
+            // console.log(food);
+
+            // 입력받은 값들을 담을 변수
+            let delItem = document.getElementById("delItem").value;
+            let addItem = document.getElementById("addItem").value;
+
+            // 삭제할 음식의 인덱스를 담을 변수
+            let index = food.indexOf(delItem);
+            // console.log(index);
+
+            //splice(시작인덱스, 제거개수 [, 추가할요소]) 함수를 통해 삭제를 원하는 값의 인덱스를 찾아 삭제
+            food.splice(index,1);
+            // console.log(food);
+
+            // 추가할 음식을 배열의 마지막 요소에 추가 => push()
+            food.push(addItem);
+            // console.log(food);
+
+            // 결과값 추출
+            divEl.innerHTML = food/*.toString()*/; // 배열에서는 toString() 자동실행되므로 생략 가능.
         }
     </script>
 </body>
