--- a/00_TEST/Test_0131.html
+++ b/00_TEST/Test_0131.html
@@ -27,7 +27,7 @@
                     <tr>
                         <td>아이디</td>
                         <td><input type="text" id="userId" name="userId" size="20px" required></td>
-                        <td><button onclick="test1();">중복확인</button></td>
+                        <td><input type="button" value="중복확인" onclick="test1();"></td>
                     </tr>
                     <tr>
                         <td>비밀번호</td>
